--- a/static/css/color.css
+++ b/static/css/color.css
@@ -1,8 +1,11 @@
 /* Define colors */
 :root {
-    --first-color:#2C2A29;   /*#023d6b*/
-    --second-color:#64B1BC;  /*#adbde3*/
-    --third-color:#BFCED6;
-    --fourth-color:#F1B434;
-    --fifth-color:#E57200;
+    --first-color:#2c2a29;   /*#023d6b*/
+    --second-color:#64b1bc;  /*#adbde3*/
+    --third-color:#bfced6;
+    --fourth-color:#f1b434;
+    --fifth-color:#e57200;
+    
+    --first-color-light:#b6b1af;
+
 }
